@@ -88,6 +88,7 @@ GridBool gridRightHandedBoundary(Grid *g );
 double gridFaceArea(Grid *g, int n0, int n1, int n2);
 double gridFaceAreaUV(Grid *g, int face);
 Grid *gridMinFaceAreaUV(Grid *g, int node, double *min_area);
+double gridMinCellFaceAreaUV(Grid *g, int *nodes );
 
 double gridFaceAR(Grid *g, int n0, int n1, int n2);
 double gridFaceMR(Grid *g, int n0, int n1, int n2);
